updating references to huetopia homepage

--- a/work-by-week/wbw.html
+++ b/work-by-week/wbw.html
@@ -72,9 +72,9 @@
             <div class="col-s-3 col-m-3 menu">
                 <div class="nav-list">
                     <ul>
-                        <li><a href="../index.html">Huetopa Homepage</a></li>
-                        <li class="active"><a href="index.html">Coursera Work by Week</a></li>
-                        <li><a href="../content/chapters/index.html">Read Now</a></li>
+                        <li><a href="../writing.html">Huetopa Homepage</a></li>
+                        <li class="active"><a href="wbw.html">Coursera Work by Week</a></li>
+                        <li><a href="../content/chapters/prose.html">Read Now</a></li>
                     </ul>
                 </div>
             </div>
