--- a/writing.html
+++ b/writing.html
@@ -37,7 +37,7 @@
             <div class="col-s-3 col-m-3 menu">
                 <div class="nav-list">
                     <ul>
-                        <li class="active"><a href="index.html">Huetopia Homepage</a></li>
+                        <li class="active"><a href="writing.html">Huetopia Homepage</a></li>
                         <!--li><a href="index1.html">old index</a></li-->
                         <li><a href="work-by-week/wbw.html">Coursera Work By Week</a></li>
                         <li><a href="content/chapters/prose.html">Read Now</a></li>
