fixing link to be menu-list.

--- a/link-repository.html
+++ b/link-repository.html
@@ -77,13 +77,22 @@
                             <h4>Real-Life size resources</h4>
                             <div class="section">
                                 <h5> Greenhouse Backdrop Project</h5>
-                                <div class="nav-list">
+                                <div class="menu">
+                                    <div class="nav-list">
+                                        <ul>
+                                            <li>
+                                                <a href="https://designingidea.com/greenouse-sizes/" target="_blank">Greenhouse size resource 1</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <!--div class="nav-list">
                                     <ul>
                                         <li>
                                             <a href="https://designingidea.com/greenhouse-sizes/" target="_blank">Greenhouse Size resouce 1</a>
                                         </li>
                                     </ul>
-                                </div>
+                                </div-->
                             </div>
                         </div>
                     </div>
