updating table title.

--- a/link-repository.html
+++ b/link-repository.html
@@ -110,6 +110,7 @@
                         <p>For artificial light sources, divide the lumen rating by the luminous efficacy to get the appropriate value.</p>
                         <p>For outdoor conditions, directly use the Radiant flux value given.</p>
                         <table>
+                            <h4>Common Lighting Radiant Flux Luminous Efficacy</h4>
                             <tr>
                                 <th>Light Source Type</th>
                                 <th>Luminous Efficacy (lm/W)</th>
